# typed-algebraic-parsing

./: CSet.ml  CSet.mli  Char_class.ml  Char_set.ml  Char_set.mli  LICENSE  README.md  Regex.ml  Regex.mli  Regular_vector.ml  Tap.ml  Tap.mli  char-class.opam  dune  dune-project  ppx_taparse.opam  structures.opam  taparse-regex.opam  taparse.opam  typed_algebraic_parsing.opam
char_class/: Char_class.ml  Char_class.mli  dune
crowbar/: crowbar.ml  dune
fmt-tree/: Fmt_tree.ml  Fmt_tree.mli  dune
laws/: dune
lib/: Char_class.ml  Char_class.mli  Char_set.mli  Derivative_class.ml  Derivative_class.mli  Dfa.ml  Laws.ml  Library.ml  Library.mli  Parser.ml  Prelude.ml  Regex.ml  Regex.mli  Regular_vector.ml  Signatures.ml  String_parser.ml  String_parser.mli  Tap.ml  Tap.mli  Token_streams.ml  Token_streams.mli  Tshift.ml  Type.ml  Unstaged.ml  Unstaged.mli  dune
ppx/: Staged.ml  Staged.mli  Staged_ir.ml  Staged_ir.mli  Staged_signatures.ml  Token_streams.ml  Token_streams.mli  dune  ppx.ml
ppx/test/: dune  test.expected.ml  test.ml
regex/: Derivative_class.ml  Dfa.mli  Lexing.ml  Lexing.mli  Regex.ml  Regex.mli  Regular_vector.ml  dune
regex_lib/: Derivative_class.ml  Laws.ml  Regular_vector.ml  Regular_vector.mli  dune
structures/: Group_like.ml  Group_like_sigs.ml  Lattice.ml  Lattice_like.ml  Lattice_like_sigs.ml  Laws.ml  Ordered_set.ml  Ordered_set_sigs.ml  Ring.ml  Ring_like.ml  Ring_like_sigs.ml  Util.ml  dune
taparse/: Library.ml  Prelude.ml  Signatures.ml  String_parser.ml  String_parser.mli  Token.ml  Token_streams.ml  Token_streams.mli  Type.ml  Unstaged.ml  Unstaged.mli  dune
