opam-version: "2.0"
version: "1.0"
synopsis: "Typed Algebraic Parsing"
maintainer: "joelburget@gmail.com"
authors: "Joel Burget"
license: "MIT"
homepage: "https://github.com/joelburget/typed-algebraic-parsing"
bug-reports: "https://github.com/joelburget/typed-algebraic-parsing/issues"
depends: [
  "base"
  "diet"
  "dune" {>= "2.0.0"}
  "fmt"
  "ocaml" {>= "4.08.0"}
  "ppx_inline_test"
  "ppx_jane"
  "ppxlib" {>= "0.22.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/joelburget/lvca.git"
